--- a/GyakAgazatiDolg/asus.html
+++ b/GyakAgazatiDolg/asus.html
@@ -3,9 +3,9 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-sRIl4kxILFvY47J16cr9ZwB07vP4J8+LH7qKQnuqkuIAvNWLzeN8tE5YBujZqJLB" crossorigin="anonymous">
   <link rel="stylesheet" href="style.css">
   <title>Asus története</title>
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-sRIl4kxILFvY47J16cr9ZwB07vP4J8+LH7qKQnuqkuIAvNWLzeN8tE5YBujZqJLB" crossorigin="anonymous">
 
 </head>
 <body>
@@ -43,7 +43,7 @@
 
   <p>A cég, amely feltette Tajvant a világ IT térképére: az Asus. A multinacionális vállalat számos számítástechnikai eszközt gyárt, asztali számítógépektől, laptopokon át szerverekig és perifériákig. Valamint elektronikus szolgáltatásokat biztosítanak nem csak otthoni, de üzleti és kormányzati felhasználók számára is. Jelmondatuk „in search of incredible”, azaz a hihetetlen keresése.</p>
 
-  <p>Az <a href="https://www.asus.com/hu/content/about_asus_history/" target="_blank">Asus</a> mára a világ egyik legjelentősebb számítástechnikai cégévé nőtte ki magát. Pedig az alapítók, T.H. Tung, Ted Hsu, Wayne Hsieh és M.T. Liao eredetileg csak egy „szép kicsi cég” megalapítását tűzték ki célul 1989-ben. </p>
+  <p>Az <span><a href="https://www.asus.com/hu/content/about_asus_history/" target="_blank">Asus</a></span> mára a világ egyik legjelentősebb számítástechnikai cégévé nőtte ki magát. Pedig az alapítók, T.H. Tung, Ted Hsu, Wayne Hsieh és M.T. Liao eredetileg csak egy „szép kicsi cég” megalapítását tűzték ki célul 1989-ben. </p>
 
   <p>Állítólag a vállalatalapítás gondolata egy tajpeji kávézóban merült fel a négy fiatal mérnökben, akik korábban az Acernél dolgoztak. Végül nem csak meglépték ezt az ambiciózus tettet, de rövid időn belül az Intel partnerprogramjához is csatlakoztak, ami azonban egyáltalán nem volt könnyű menet.</p>
 
@@ -59,7 +59,7 @@
   <p>
     <b><i>A legújabb elektronikai elméletekre és a termékfejlesztésre helyezték a hangsúlyt.</i></b> Ezt az üzletpolitikát jól szemlélteti az is, hogy a vállalat már a 2000-es évek környékén is a bevételének 2%-át kutatás-fejlesztésre fordította, ráadásul munkatársaik legalább 10%-ának ez volt a kifejezett feladata.
 
-Szintén a 2000-es évek elején alakították ki az első ügyfélszolgálati központokat Kínában, Hollandiában, Ausztráliában, Csehországban, Japánban és az Egyesült Államokban. 2001-ben pedig létrehozták az Asus Royal Clubot, amely nonstop műszaki támogatást és ügyfélszolgálati segítségnyújtást biztosított.
+    Szintén a 2000-es évek elején alakították ki az első ügyfélszolgálati központokat Kínában, Hollandiában, Ausztráliában, Csehországban, Japánban és az Egyesült Államokban. 2001-ben pedig létrehozták az Asus Royal Clubot, amely nonstop műszaki támogatást és ügyfélszolgálati segítségnyújtást biztosított.
 
   </p>
   <h2>Az Asus: Innováció és Minőség</h2>
@@ -73,8 +73,8 @@ Szintén a 2000-es évek elején alakították ki az első ügyfélszolgálati k
   </ul>
   
   <h2>Asus Termékvonalak</h2>
-  <table class="table">
-    <caption>Célközönség</caption>
+  <table>
+    <caption><h2>Célközönség</h2></caption>
     <tr>
       <th>Termékvonal</th>
       <th>Célközönség</th>
@@ -96,8 +96,12 @@ Szintén a 2000-es évek elején alakították ki az első ügyfélszolgálati k
       <td>Színpontos kijelzők, nagy teljesítményű processzorok, professzionális csatlakozók</td>
     </tr>
   </table>
+  <footer>
+  Készítette: Saját név &copy;
+</footer>
   </div>
 </main>
+
 
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js" integrity="sha384-FKyoEForCGlyvwx9Hj09JcYn3nv7wiPVlz7YYwJrWVcXK/BmnVDxM+D2scQbITxI" crossorigin="anonymous"></script>
 
